--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore the datafile used to seed our collection of gems
+rubygems.json
