--- a/config/swiftype.yml.sample
+++ b/config/swiftype.yml.sample
@@ -1,2 +1,2 @@
-app_search_account_key: YOUR_ACCOUNT_KEY_HERE
+app_search_host_identifier: YOUR_HOST_IDENTIFIER_HERE
 app_search_api_key: YOUR_API_KEY_HERE
